RESOLVED FIXED169693
Positioned SVG not sized correctly
https://bugs.webkit.org/show_bug.cgi?id=169693
Summary Positioned SVG not sized correctly
Dave Hyatt
Reported 2017-03-15 12:54:29 PDT
Positioned SVG not sized correctly
Attachments
Patch (17.32 KB, patch)
2017-03-15 13:10 PDT, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2017-03-15 13:10:18 PDT
Dave Hyatt
Comment 2 2017-03-15 15:10:45 PDT
Fixed in r214010.
Note You need to log in before you can comment on or make changes to this bug.